Fixed menu overlapping bag in top menu

--- a/GoIT/markup/home/lesson_05/css/style.css
+++ b/GoIT/markup/home/lesson_05/css/style.css
@@ -35,7 +35,7 @@ a {
   display: inline-block;
 }
 .header a {
-  padding: 12px 13px 14px;
+  padding: 12px 13px 12px;
 }
 .header a:hover {
   background-color: #4eabda;
